--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,13 +15,13 @@ spec:
     spec:
       containers:
       - name: springboot-generador
-        image: luistasayco2004/springboot-generador:v1.0
+        image:  luistasayco2004/springboot-generador:v2.0
         ports:
         - containerPort: 8080
         resources:
           requests:
-            memory: "256Mi"  # Memoria mínima solicitada
-            cpu: "500m"      # CPU mínima solicitada
+            memory: "256Mi"  
+            cpu: "500m"     
           limits:
-            memory: "512Mi"  # Memoria máxima permitida
-            cpu: "1"         # CPU máxima permitida
+            memory: "512Mi" 
+            cpu: "1"       
